Nota tecnica para articulo principal

--- a/nota-tecnica/Nota Tecnica.ipynb
+++ b/nota-tecnica/Nota Tecnica.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Nota tecnica: \n",
-    "### Elaboración de ratio distrital de cobertura de hogares en pobreza monetaria con transferencia\n",
+    "### Elaboración de ratio ratio distrital de cobertura por medio de transferencias según la prevalencia de pobreza monetaria \n",
     "\n",
     "#### <i> Articulo: 'Los bonos para enfrentar la pandemia: avances, retos y siguientes pasos' </i>\n"
    ]
