--- a/mapas-interactivos/Mapa 1- Porcentaje de Hogares a nivel distrital que recibieron 'Bono COVID' - MIDIS.ipynb
+++ b/mapas-interactivos/Mapa 1- Porcentaje de Hogares a nivel distrital que recibieron 'Bono COVID' - MIDIS.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,18 +28,17 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1232b8a90>"
+       "<IPython.lib.display.IFrame at 0x106650950>"
       ]
      },
-     "execution_count": 45,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# Display the map\n",
     "from IPython.display import IFrame\n",
-    "IFrame(src='mapa1_bono_covid.html', width=800, height=1000)"
+    "display(IFrame(src='mapa1_bono_covid.html', width=800, height=1000))"
    ]
   },
   {
