--- a/mapas-interactivos/Mapa1.Rmd
+++ b/mapas-interactivos/Mapa1.Rmd
@@ -2,9 +2,7 @@
 title: "Mapa1-ArticuloOP"
 author: "Joan J Martinez"
 date: "6/7/2020"
-output: html_document:
-        toc: true
-        theme: united
+output: html_document
 ---
 ---
 title: "Mapa 1"
